# Form-Messenger

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-docker-release.yml
src/: main.rs
