[package]
name = "Form-Messenger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
dotenv = "0.15.0"
http = "1.3.1"
lettre = { version = "0.11.15", default-features = false, features = ["builder", "rustls-tls", "smtp-transport", "tokio1", "tokio1-rustls"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["buffer", "limit"] }
tower-http = { version = "0.6.1", features = ["cors"] }
